--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 # require torch with version = 1.x.x
-torch==1.13.1+cu117 --extra-index-url https://download.pytorch.org/whl/cu117
-# human_body_prior
-git+https://github.com/nghorbani/human_body_prior#egg=human_body_prior
+# torch==1.13.1+cu117 --extra-index-url https://download.pytorch.org/whl/cu117
+# git+https://github.com/nghorbani/human_body_prior#egg=human_body_prior
 omegaconf
 loguru
 smplx
@@ -10,3 +9,6 @@ tqdm
 bpy
 pyyaml
 configargparse
+pose-format
+tensorflow
+ffmpeg-python
