Hoàn thiện lại code để chạy trên server và update .gitignore, readme.md

--- a/.gitignore
+++ b/.gitignore
@@ -163,7 +163,9 @@ cython_debug/
 .venv/
 .vscode/
 models/
-data/
+data/input-data
+data/output-data
+data/temp
 res/blender/addon/
 **/test.py
 *.md
